<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/paymentOptionsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/payment_options"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeIV"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="2dp"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_grey" />

    <RadioGroup
        android:id="@+id/paymentOptionsRB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentOptionsTV">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/codRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:checked="true"
            android:fontFamily="@font/helvetica_neue"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/cash_on_delivery"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/cardRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/helvetica_neue"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/credit_debit_card"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/knetRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/helvetica_neue"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/knet"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/grey_250"
        android:fontFamily="@font/helvetica_neue_bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/grey_text_light_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doneTV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doneTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:fontFamily="@font/helvetica_neue_bold"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelTV" />
</androidx.constraintlayout.widget.ConstraintLayout>