<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.cosmetics.lush.ui.homemodule.give_review.GiveReviewViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:gravity="center"
            android:orientation="vertical">

            <!--  <androidx.appcompat.widget.AppCompatImageView
                  android:id="@+id/imageViewDone"
                  android:layout_width="@dimen/dimen_100"
                  android:layout_height="@dimen/dimen_100"
                  android:layout_marginTop="@dimen/dimen_40"
                  app:srcCompat="@drawable/ic_check_circle" />-->

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginTop="@dimen/dimen_40"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/anim_payment_success"
                app:lottie_repeatMode="reverse" />

            <TextView
                android:id="@+id/textViewMessageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginEnd="@dimen/dimen_12"
                android:drawablePadding="@dimen/dimen_10"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@string/your_order_has_been_placed"
                android:textColor="@color/black"
                android:textSize="@dimen/font_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewMessageBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_16"
                android:fontFamily="@font/helvetica_neue_medium"
                android:gravity="center_horizontal"
                android:text="@string/order_has_been_placed_body"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBT"
            style="@style/CommonDarkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/dimen_30"
            android:text="@string/title_continue"
            app:layout_constraintBottom_toBottomOf="parent" />

    </FrameLayout>
</layout>